--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,3 +14,8 @@ footer {
 /* smart phones */
 @media screen and (max-device-width: 480px) {
 }
+
+
+#servoAngleSlider .slider-selection {
+	background: #BABABA;
+}
